add analyze config

--- a/css/index.css
+++ b/css/index.css
@@ -13,3 +13,10 @@
 .tunnelBlock{
     background-color: #0e56b1;
 }
+
+.analyzeTable{
+    border: 1px solid;
+    border-collapse: collapse;
+    border-color: black;
+    margin-top: 40px;
+}
